<resources>
    <string name="app_name">PyTutor</string>
    <string name="pytutor">PyTutor</string>
    <string name="get_started">Let\'s Get\nStarted!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>

    <string  name="open_nav">Open Navigation Drawer</string>
    <string  name="close_nav">Close Navigation Drawer</string>
    <string name="add_item">add_item</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
</resources>